--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_register_next.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_register_next.xml
@@ -110,7 +110,7 @@
                         android:drawablePadding="10dp"
                         android:drawableRight="@drawable/text"
                         android:gravity="center"
-                        android:text="商家"
+                        android:text="代理商"
                         android:textColor="#696969"
                         android:textSize="16sp"
                         tools:ignore="TextFields" />
