--- a/BestarProject/ShoppingMall/src/main/res/menu/actions_shengfen.xml
+++ b/BestarProject/ShoppingMall/src/main/res/menu/actions_shengfen.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_shengFen_type1"
-        android:title="商家" />
+        android:title="代理商" />
     <item
         android:id="@+id/menu_shengFen_type2"
         android:title="园长" />
