--- a/BestarProject/ShoppingMall/src/main/res/values/colors.xml
+++ b/BestarProject/ShoppingMall/src/main/res/values/colors.xml
@@ -23,12 +23,16 @@
     <color name="house_image_red">#e60404</color>
     <color name="line_mine_color">#DBDBDB</color>
     <color name="filtrate_listview2_bg">#fafafa</color>
-
+    <color name="black_a10">#1a000000</color>
     <color name="red_light">#ffff4444</color>
     <color name="green_light">#ff99cc00</color>
     <color name="orange_light">#ffffbb33</color>
     <color name="blue_light">#ff33b5e5</color>
     <!-- #2F4F4F -->
+
+    <color name="color_bbb9bb">#bbb9bb</color>
+    <color name="color_b5b3b1">#b5b3b1</color>
+    <color name="color_e0e0e0">#e0e0e0</color>
     <color name="actionbar">#12c1c4</color>
     <color name="actionbutton"> #0fa4a7</color>
     <color name="white_action">#ffffff</color>
