--- a/BestarProject/ShoppingMall/src/main/res/values/styles.xml
+++ b/BestarProject/ShoppingMall/src/main/res/values/styles.xml
@@ -26,7 +26,37 @@
         <item name="android:windowTitleSize">0dip</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    <style name="AnimationPopupwindow">
+        <item name="android:windowEnterAnimation">@anim/anim_view_appear_from_bottom</item>
+        <item name="android:windowExitAnimation">@anim/anim_view_exit_from_bottom</item>
+    </style>
+    <style name="AnimBottom" parent="@android:style/Animation">
+        <item name="android:windowEnterAnimation">@anim/push_bottom_in</item>
+        <item name="android:windowExitAnimation">@anim/push_bottom_out</item>
+    </style>
 
+    <style name="DialogStyleBottom" parent="android:Theme.Dialog">
+        <item name="android:windowAnimationStyle">@style/AnimBottom</item>
+        <item name="android:windowFrame">@null</item>
+        <!-- 边框 -->
+        <item name="android:windowIsFloating">false</item>
+        <!-- 是否浮现在activity之上 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- 半透明 -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 无标题 -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- 背景透明 -->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!-- 模糊 -->
+    </style>
+    <style name="MyDialog" parent="android:Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@drawable/dialog_background</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowAnimationStyle">@null</item>
     </style>
