--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_mine.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_mine.xml
@@ -39,14 +39,20 @@
                         android:padding="20dp">
 
                         <com.manyi.mall.widget.imageView.CircleImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
                             android:layout_gravity="center_horizontal"
                             android:src="@drawable/head"
                             app:border_width="0dp"
                             android:id="@+id/headLayout"
                             app:border_color="@color/blue" />
-
+                        <!--<ImageView-->
+                            <!--android:layout_width="50dp"-->
+                            <!--android:layout_height="50dp"-->
+                            <!--android:layout_gravity="center_horizontal"-->
+                            <!--android:src="@drawable/head"-->
+                            <!--android:id="@+id/headLayout"-->
+                            <!--/>-->
                         <TextView
                             android:id="@+id/nameTV"
                             android:layout_width="wrap_content"
