--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_user_info.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_user_info.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/register_next_relative_layout"
+    android:id="@+id/fragment_userInfo"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:toggle="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/register_background"
@@ -85,16 +87,26 @@
                         android:gravity="center"
                         android:layout_alignParentRight="true"
                         tools:ignore="TextFields" />
-                    <ImageView
+                    <com.manyi.mall.widget.imageView.CircleImageView
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        android:id="@+id/headImgView"
-                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_horizontal"
                         android:src="@drawable/head"
                         android:layout_marginRight="20dp"
-                        android:adjustViewBounds="true"
                         android:layout_toLeftOf="@id/headArrow"
-                        />
+                        app:border_width="0dp"
+                        android:id="@+id/headImgView"
+                        app:border_color="@color/blue" />
+                    <!--<ImageView-->
+                        <!--android:layout_width="60dp"-->
+                        <!--android:layout_height="60dp"-->
+                        <!--android:id="@+id/headImgView"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:src="@drawable/head"-->
+                        <!--android:layout_marginRight="20dp"-->
+                        <!--android:adjustViewBounds="true"-->
+                        <!--android:layout_toLeftOf="@id/headArrow"-->
+                        <!--/>-->
                 </RelativeLayout>
 
                 <View
